control-plane-operator/controllers/hostedcontrolplane/v2/assets/ignition-server-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignition-server-proxy
spec:
  selector:
    matchLabels:
      app: ignition-server-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ignition-server-proxy
    spec:
      containers:
      - args:
        - -c
        - |
          #!/bin/bash
          set -e
          cat /etc/ssl/serving-cert/tls.crt /etc/ssl/serving-cert/tls.key > /tmp/tls.pem
          haproxy -f /etc/haproxy/haproxy.conf
        command:
        - /bin/bash
        image: haproxy-router-haproxy32
        imagePullPolicy: IfNotPresent
        name: haproxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
        volumeMounts:
        - mountPath: /etc/ssl/serving-cert
          name: serving-cert
        - mountPath: /etc/ssl/root-ca
          name: root-ca
        - mountPath: /etc/haproxy
          name: haproxy-config
          readOnly: true
      securityContext:
        runAsNonRoot: true
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 416
          secretName: ignition-server-serving-cert
      - configMap:
          defaultMode: 420
          name: root-ca
        name: root-ca
      - configMap:
          defaultMode: 420
          name: ignition-server-proxy-config
        name: haproxy-config
