control-plane-operator/controllers/hostedcontrolplane/v2/assets/ignition-server-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignition-server-proxy
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: ignition-server-proxy
  type: ClusterIP
